
add_executable(cvector_test cvector-test.cpp)
add_executable(matrix_map_test matrix-map-test.cpp)
add_executable(mu_units_test mu-units-test.cpp)
add_executable(nint_test nint-test.cpp)
add_executable(seed_value_test seed-value-test.cpp)
add_executable(telegraph_process_test telegraph-process-test.cpp)
add_executable(value_cvector_test value-cvector-test.cpp)
add_executable(value_type_test value-type-test.cpp)

target_link_libraries(cvector_test cpputil)
target_link_libraries(matrix_map_test cpputil)
target_link_libraries(mu_units_test cpputil)
target_link_libraries(nint_test cpputil)
target_link_libraries(seed_value_test cpputil)
target_link_libraries(telegraph_process_test cpputil)
target_link_libraries(value_cvector_test cpputil)
target_link_libraries(value_type_test cpputil)