set(CMAKE_THREAD_PREFER_PTHREAD ON)
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)

#[[
dd_executable(displacer-test displacer-test.cpp)
add_executable(grid-cells-test grid-cells-test.cpp)
add_executable(pair-list-test pair-list-test.cpp)
add_executable(pdb-test pdb-test.cpp)
add_executable(pt-pairlist-test pt-pairlist-test.cpp)
add_executable(simulation-model-factory-test simulation-model-factory-test.cpp)
add_executable(simulation-test simulation-test.cpp)
add_executable(analyzers-test analyzers-test.cpp)
]]

add_executable(protonatable-particle-system-factory-test protonatable-particle-system-factory-test.cpp)
add_executable(forcefield-test forcefield-test.cpp)
add_executable(pair-list-test pair-list-test.cpp)
add_executable(interactor-test interactor-test.cpp)
add_executable(pair-potential-test pair-potential-test.cpp)

#[[
target_link_directories(displacer-test PUBLIC ${CMAKE_INSTALL_PREFIX}/lib)
target_link_libraries(displacer-test simulation particles util cpputil pthread)
target_link_directories(grid-cells-test PUBLIC ${CMAKE_INSTALL_PREFIX}/lib)
target_link_libraries(grid-cells-test simulation particles util cpputil pthread)
target_link_directories(pdb-test PUBLIC ${CMAKE_INSTALL_PREFIX}/lib)
target_link_libraries(pdb-test simulation particles util cpputil pthread)
target_link_directories(pt-pairlist-test PUBLIC ${CMAKE_INSTALL_PREFIX}/lib)
target_link_libraries(pt-pairlist-test simulation particles util cpputil pthread)
target_link_directories(simulation-model-factory-test PUBLIC ${CMAKE_INSTALL_PREFIX}/lib)
target_link_libraries(simulation-model-factory-test simulation particles util cpputil pthread)
target_link_directories(simulation-test PUBLIC ${CMAKE_INSTALL_PREFIX}/lib)
target_link_libraries(simulation-test simulation particles util cpputil pthread)
target_link_directories(analyzers-test PUBLIC ${CMAKE_INSTALL_PREFIX}/lib)
target_link_libraries(analyzers-test simulation particles util cpputil pthread)
]]

target_link_directories(protonatable-particle-system-factory-test PUBLIC ${CMAKE_INSTALL_PREFIX}/lib)
target_link_libraries(protonatable-particle-system-factory-test simulation particles util cpputil pthread)
target_link_directories(forcefield-test PUBLIC ${CMAKE_INSTALL_PREFIX}/lib)
target_link_libraries(forcefield-test simulation particles util cpputil pthread)
target_link_directories(pair-list-test PUBLIC ${CMAKE_INSTALL_PREFIX}/lib)
target_link_libraries(pair-list-test simulation particles util cpputil pthread)
target_link_directories(interactor-test PUBLIC ${CMAKE_INSTALL_PREFIX}/lib)
target_link_libraries(interactor-test simulation particles util cpputil pthread)
target_link_directories(pair-potential-test PUBLIC ${CMAKE_INSTALL_PREFIX}/lib)
target_link_libraries(pair-potential-test simulation particles util cpputil pthread)
