set(CMAKE_THREAD_PREFER_PTHREAD ON)
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)

add_executable(protonatable-particle-system-factory-test protonatable-particle-system-factory-test.cpp)
add_executable(forcefield-test forcefield-test.cpp)
add_executable(pair-list-test pair-list-test.cpp)
add_executable(interactor-test interactor-test.cpp)
add_executable(pair-potential-test pair-potential-test.cpp)
add_executable(pdb-test pdb-test.cpp)
add_executable(displacer-test displacer-test.cpp)
add_executable(simulation-test simulation-test.cpp)
add_executable(rf-test rf-test.cpp)
add_executable(lj-test lj-test.cpp)
add_executable(elec-pot-difference-test voltage-test.cpp)
add_executable(sf-test sf-test.cpp)
add_executable(wall-test wall-test.cpp)
add_executable(units-dpd-test units-dpd-test.cpp)
add_executable(soft-repulsion-test soft-repulsion-test.cpp)
add_executable(dpd-test dpd-test.cpp)
add_executable(hp-sr-test hp-sr-test.cpp)
add_executable(cell-test cell-test.cpp)
add_executable(voltage-test voltage-test.cpp)
add_executable(bc-util-test bc-util-test.cpp)
add_executable(pbc-2d-test pbc-2d-test.cpp)
add_executable(uniform-surface-charge-density-test uniform-surface-charge-density-test.cpp)
add_executable(lekner-test lekner-test.cpp)
add_executable(lekner-srf-particles-test lekner-srf-particles-test.cpp)
add_executable(vplanes-test vplanes-test.cpp)
add_executable(mc-test mc-test.cpp)

target_link_directories(protonatable-particle-system-factory-test PUBLIC ${CMAKE_INSTALL_PREFIX}/lib)
target_link_libraries(protonatable-particle-system-factory-test simulation particles util cpputil pthread)
target_link_directories(forcefield-test PUBLIC ${CMAKE_INSTALL_PREFIX}/lib)
target_link_libraries(forcefield-test simulation particles util cpputil pthread)
target_link_directories(pair-list-test PUBLIC ${CMAKE_INSTALL_PREFIX}/lib)
target_link_libraries(pair-list-test simulation particles util cpputil pthread)
target_link_directories(interactor-test PUBLIC ${CMAKE_INSTALL_PREFIX}/lib)
target_link_libraries(interactor-test simulation particles util cpputil pthread)
target_link_directories(pair-potential-test PUBLIC ${CMAKE_INSTALL_PREFIX}/lib)
target_link_libraries(pair-potential-test simulation particles util cpputil pthread)
target_link_directories(pdb-test PUBLIC ${CMAKE_INSTALL_PREFIX}/lib)
target_link_libraries(pdb-test simulation particles util cpputil pthread)
target_link_directories(displacer-test PUBLIC ${CMAKE_INSTALL_PREFIX}/lib)
target_link_libraries(displacer-test simulation particles util cpputil pthread)
target_link_directories(simulation-test PUBLIC ${CMAKE_INSTALL_PREFIX}/lib)
target_link_libraries(simulation-test simulation particles util cpputil pthread)
target_link_directories(rf-test PUBLIC ${CMAKE_INSTALL_PREFIX}/lib)
target_link_libraries(rf-test simulation particles util cpputil pthread)
target_link_directories(lj-test PUBLIC ${CMAKE_INSTALL_PREFIX}/lib)
target_link_libraries(lj-test simulation particles util cpputil pthread)
target_link_directories(elec-pot-difference-test PUBLIC ${CMAKE_INSTALL_PREFIX}/lib)
target_link_libraries(elec-pot-difference-test simulation particles util cpputil pthread)
target_link_directories(sf-test PUBLIC ${CMAKE_INSTALL_PREFIX}/lib)
target_link_libraries(sf-test simulation particles util cpputil pthread)
target_link_directories(wall-test PUBLIC ${CMAKE_INSTALL_PREFIX}/lib)
target_link_libraries(wall-test simulation particles util cpputil pthread)
target_link_directories(units-dpd-test PUBLIC ${CMAKE_INSTALL_PREFIX}/lib)
target_link_libraries(units-dpd-test simulation particles util cpputil pthread)
target_link_directories(soft-repulsion-test PUBLIC ${CMAKE_INSTALL_PREFIX}/lib)
target_link_libraries(soft-repulsion-test simulation particles util cpputil pthread)
target_link_directories(dpd-test PUBLIC ${CMAKE_INSTALL_PREFIX}/lib)
target_link_libraries(dpd-test simulation particles util cpputil pthread)
target_link_directories(hp-sr-test PUBLIC ${CMAKE_INSTALL_PREFIX}/lib)
target_link_libraries(hp-sr-test simulation particles util cpputil pthread)
target_link_directories(cell-test PUBLIC ${CMAKE_INSTALL_PREFIX}/lib)
target_link_libraries(cell-test simulation particles util cpputil pthread)
target_link_directories(voltage-test PUBLIC ${CMAKE_INSTALL_PREFIX}/lib)
target_link_libraries(voltage-test simulation particles util cpputil pthread)
target_link_directories(bc-util-test PUBLIC ${CMAKE_INSTALL_PREFIX}/lib)
target_link_libraries(bc-util-test simulation particles util cpputil pthread)
target_link_directories(pbc-2d-test PUBLIC ${CMAKE_INSTALL_PREFIX}/lib)
target_link_libraries(pbc-2d-test PUBLIC simulation particles util cpputil pthread)
target_link_directories(uniform-surface-charge-density-test PUBLIC ${CMAKE_INSTALL_PREFIX}/lib)
target_link_libraries(uniform-surface-charge-density-test PUBLIC simulation particles util cpputil pthread)
target_link_directories(lekner-test PUBLIC ${CMAKE_INSTALL_PREFIX}/lib)
target_link_libraries(lekner-test PUBLIC simulation particles util cpputil pthread)
target_link_directories(lekner-srf-particles-test PUBLIC ${CMAKE_INSTALL_PREFIX}/lib)
target_link_libraries(lekner-srf-particles-test PUBLIC simulation particles util cpputil pthread)
target_link_directories(vplanes-test PUBLIC ${CMAKE_INSTALL_PREFIX}/lib)
target_link_libraries(vplanes-test PUBLIC simulation particles util cpputil pthread)
target_link_directories(mc-test PUBLIC ${CMAKE_INSTALL_PREFIX}/lib)
target_link_libraries(mc-test PUBLIC simulation particles util cpputil pthread)
