add_executable(mu_units_test units-mu-test.cpp)
add_executable(box-cube-test box-cube-test.cpp)
add_executable(telegraph_process_test telegraph-process-test.cpp)
add_executable(cvector_test cvector-test.cpp)
add_executable(matrix_map_test matrix-map-test.cpp)
add_executable(nint_test nint-test.cpp)
add_executable(seed_value_test seed-value-test.cpp)
add_executable(value_cvector_test value-cvector-test.cpp)
add_executable(value_type_test value-type-test.cpp)
add_executable(id-test id-test.cpp)
add_executable(param-test param-test.cpp)

target_link_libraries(mu_units_test util)
target_link_libraries(box-cube-test util)
target_link_libraries(telegraph_process_test util)
target_link_libraries(cvector_test util)
target_link_libraries(matrix_map_test util)
target_link_libraries(nint_test util)
target_link_libraries(seed_value_test util)
target_link_libraries(value_cvector_test util)
target_link_libraries(value_type_test util)
target_link_libraries(id-test util)
target_link_libraries(param-test util)

